fixed popup styling

--- a/src/styles/pages/_jobs.scss
+++ b/src/styles/pages/_jobs.scss
@@ -349,3 +349,27 @@
     width: 110px;
   }
 }
+  .popupActive .loginReminder {
+    width: 410px;
+    border-radius: 20px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 180px;
+    background-color: white;
+    p {
+      color: black;
+    }
+    div {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .buttonRoundClear {
+      color: black;
+      border-color: black;
+    }
+  }
