--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -12,6 +12,39 @@
   min-height: 100vh;
   padding-bottom: 50px;
 }
+.contactHeader,
+.jobsHeader,
+.pricingHeader,
+.jobDetailsHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: $darkGreen;
+  nav {
+    position: relative;
+    z-index: 10;
+    background-color: $darkGreen;
+    color: white;
+  }
+  .subMenuParent a {
+    color: black;
+  }
+  a {
+    color: white;
+  }
+  button {
+    color: white;
+    border-color: transparent;
+  }
+  h1 {
+    color: white;
+  }
+  span {
+    color: white;
+    margin-bottom: 60px;
+  }
+}
 nav {
   width: 100%;
   padding: 50px 0;
