--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -8,7 +8,12 @@ body {
   margin: 0;
 }
 
-article, aside, footer, header, nav, section {
+article,
+aside,
+footer,
+header,
+nav,
+section {
   display: block;
 }
 
@@ -17,7 +22,9 @@ h1 {
   margin: 0.67em 0;
 }
 
-figcaption, figure, main {
+figcaption,
+figure,
+main {
   display: block;
 }
 
@@ -47,15 +54,19 @@ abbr[title] {
   text-decoration: underline dotted;
 }
 
-b, strong {
+b,
+strong {
   font-weight: inherit;
 }
 
-b, strong {
+b,
+strong {
   font-weight: bolder;
 }
 
-code, kbd, samp {
+code,
+kbd,
+samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
@@ -73,7 +84,8 @@ small {
   font-size: 80%;
 }
 
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -88,7 +100,8 @@ sup {
   top: -0.5em;
 }
 
-audio, video {
+audio,
+video {
   display: inline-block;
 }
 
@@ -105,31 +118,46 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   font-family: sans-serif;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
 }
 
-button, input {
+button,
+input {
   overflow: visible;
 }
 
-button, select {
+button,
+select {
   text-transform: none;
 }
 
-button, html [type=button], [type=reset], [type=submit] {
+button,
+html [type=button],
+[type=reset],
+[type=submit] {
   appearance: button;
 }
 
-button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
-button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -155,12 +183,14 @@ textarea {
   overflow: auto;
 }
 
-[type=checkbox], [type=radio] {
+[type=checkbox],
+[type=radio] {
   box-sizing: border-box;
   padding: 0;
 }
 
-[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -169,7 +199,8 @@ textarea {
   outline-offset: -2px;
 }
 
-[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
+[type=search]::-webkit-search-cancel-button,
+[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -178,7 +209,8 @@ textarea {
   font: inherit;
 }
 
-details, menu {
+details,
+menu {
   display: block;
 }
 
@@ -265,6 +297,24 @@ img {
   margin: 0 auto;
 }
 
+main,
+section,
+.contactUs,
+.jobDetailsSection,
+.jobListings,
+.pricing,
+.dashboardContent {
+  animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @font-face {
   font-family: "Gordita Regular";
   font-style: normal;
@@ -607,6 +657,7 @@ nav {
 }
 .navLogo img {
   width: 90px;
+  cursor: pointer;
 }
 
 .navMenu {
@@ -1484,6 +1535,9 @@ span.fakeTextBreaks {
   justify-content: space-between;
   align-items: center;
 }
+.loginMain .popupForm input[type=password] {
+  letter-spacing: 2px;
+}
 .loginMain .popupForm input {
   width: 100%;
   margin-top: 5px;
@@ -1701,6 +1755,9 @@ span.fakeTextBreaks {
 .signupMain .popupForm .passVisibility * {
   pointer-events: none;
 }
+.signupMain .popupForm input[type=password] {
+  letter-spacing: 2px;
+}
 .signupMain .popupForm input {
   width: 100%;
   margin-top: 5px;
@@ -1717,7 +1774,7 @@ span.fakeTextBreaks {
 }
 .signupMain .popupForm .signupConfirm input:disabled {
   background-color: rgba(128, 128, 128, 0.473);
-  filter: blur(5px);
+  filter: blur(2px);
 }
 .signupMain .popupForm label {
   font-size: 0.7rem;
@@ -1991,6 +2048,9 @@ h1 {
   width: 100%;
   object-fit: cover;
   opacity: 0.8;
+}
+.contactUsMap span {
+  color: #244034;
 }
 
 .flexed {
@@ -2677,14 +2737,14 @@ h1 {
   display: flex;
 }
 .dashboardSection .dashboardWrapper {
-  width: 80%;
+  width: 100%;
 }
 .dashboardSection .dashboardWrapper nav {
   background-color: #EFF6F3;
 }
 .dashboardSection .dashboardWrapper .navLogo {
   position: absolute;
-  left: 70px;
+  left: 38px;
   width: 100px;
   min-width: 10%;
 }
@@ -2700,11 +2760,10 @@ h1 {
 .dashboardContainer .dashboardNav {
   position: sticky;
   top: 0;
-  padding: 30px 10px;
-  border-radius: 20px;
+  padding: 30px 5px;
   background-color: white;
-  width: 20%;
-  min-width: 240px;
+  width: 15%;
+  min-width: 190px;
   height: 100vh;
   min-height: 650px;
   display: flex;
@@ -2722,7 +2781,7 @@ h1 {
 .dashboardContainer .avatar .avatarImage {
   height: 80px;
   width: 80px;
-  background-color: #00BF58;
+  background-color: black;
   border-radius: 50%;
   margin-bottom: 10px;
 }
@@ -2747,7 +2806,7 @@ h1 {
 .dashboardContainer .dashboardOptions label {
   text-transform: capitalize;
   border-radius: 20px;
-  padding: 15px;
+  padding: 10px;
   width: 100%;
   display: flex;
   justify-content: flex-start;
@@ -2762,6 +2821,9 @@ h1 {
 .dashboardContainer .dashboardContent {
   width: 100%;
   padding: 30px;
+}
+.dashboardContainer .dashboardContent h2 {
+  margin-bottom: 50px;
 }
 .dashboardContainer .dashboardLogout {
   text-transform: capitalize;
@@ -2785,6 +2847,7 @@ h1 {
 }
 .dashboardContainer .dashboardStats {
   width: 100%;
+  min-width: 900px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -2793,23 +2856,46 @@ h1 {
   border-radius: 20px;
   background-color: white;
   padding: 20px;
-  margin: 30px 0;
-  width: calc(25% - 30px);
+  margin: 10px 0;
+  width: calc(25% - 10px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.dashboardContainer .dashboardStats li .statsLogo {
+  height: 50px;
+  width: 50px;
+  min-width: 50px;
+}
+.dashboardContainer .dashboardStats li span {
+  font-size: 0.6rem;
 }
 .dashboardContainer .dashboardSummary {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .dashboardContainer .summaryChart {
-  width: 55%;
+  width: calc(50% - 10px);
   border-radius: 20px;
   padding: 20px;
   background-color: white;
   height: 400px;
 }
 .dashboardContainer .recentlyApplied {
-  width: 40%;
+  width: calc(50% - 10px);
+  border-radius: 20px;
+  padding: 20px;
+  background-color: white;
+  height: 400px;
+}
+
+.myProfileBio,
+.myProfileSocials,
+.myProfileLocation {
+  margin-bottom: 10px;
+  width: 100%;
   border-radius: 20px;
   padding: 20px;
   background-color: white;
