--- a/src/styles/layout/_login.scss
+++ b/src/styles/layout/_login.scss
@@ -98,6 +98,9 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    input[type="password"] {
+      letter-spacing: 2px;
+    }
     input {
       width: 100%;
       margin-top: 5px;
