--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -32,11 +32,15 @@
   min-height: 400px;
   height: 400px;
   max-width: 2000px;
+
   img {
     height: 100%;
     width: 100%;
     object-fit: cover;
     opacity: 0.8;
+  }
+  span {
+    color: $darkGreen;
   }
 }
 .flexed {
