--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -5,13 +5,13 @@
   min-height: 100vh;
   display: flex;
   .dashboardWrapper {
-    width: 80%;
+    width: 100%;
     nav {
       background-color: $greenBg;
     }
     .navLogo {
       position: absolute;
-      left: 70px;
+      left: 38px;
       width: 100px;
       min-width: 10%;
     }
@@ -27,11 +27,11 @@
   .dashboardNav {
     position: sticky;
     top: 0;
-    padding: 30px 10px;
-    border-radius: 20px;
+    padding: 30px 5px;
+    // border-radius: 20px;
     background-color: white;
-    width: 20%;
-    min-width: 240px;
+    width: 15%;
+    min-width: 190px;
     height: 100vh;
     min-height: 650px;
     display: flex;
@@ -48,7 +48,7 @@
     .avatarImage {
       height: 80px;
       width: 80px;
-      background-color: $lightGreen;
+      background-color: black;
       border-radius: 50%;
       margin-bottom: 10px;
     }
@@ -73,7 +73,7 @@
     label {
       text-transform: capitalize;
       border-radius: 20px;
-      padding: 15px;
+      padding: 10px;
       width: 100%;
       display: flex;
       justify-content: flex-start;
@@ -89,6 +89,9 @@
   .dashboardContent {
     width: 100%;
     padding: 30px;
+    h2 {
+      margin-bottom: 50px;
+    }
   }
   .dashboardLogout {
     text-transform: capitalize;
@@ -112,6 +115,7 @@
   }
   .dashboardStats {
     width: 100%;
+    min-width: 900px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -119,27 +123,49 @@
       border-radius: 20px;
       background-color: white;
       padding: 20px;
-      margin: 30px 0;
-      width: calc(100% / 4 - 30px);
+      margin: 10px 0;
+      width: calc(100% / 4 - 10px);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .statsLogo {
+        height: 50px;
+        width: 50px;
+        min-width: 50px;
+      }
+      span {
+        font-size: 0.6rem;
+      }
     }
   }
   .dashboardSummary {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   .summaryChart {
-    width: 55%;
+    width: calc(100% / 2 - 10px);
     border-radius: 20px;
     padding: 20px;
     background-color: white;
     height: 400px;
   }
   .recentlyApplied {
-    width: 40%;
+    width: calc(100% / 2 - 10px);
     border-radius: 20px;
     padding: 20px;
     background-color: white;
     height: 400px;
   }
+}
+.myProfileBio,
+.myProfileSocials,
+.myProfileLocation {
+  margin-bottom: 10px;
+  width: 100%;
+  border-radius: 20px;
+  padding: 20px;
+  background-color: white;
+  height: 400px;
 }
