--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -171,6 +171,7 @@ h1 {
 }
 .headerSearchContainer {
   width: 100%;
+  max-width: 800px;
   display: flex;
   justify-content: space-between;
   align-items: center;
