--- a/src/styles/base/_setup.scss
+++ b/src/styles/base/_setup.scss
@@ -211,7 +211,7 @@ html {
   font-size: 125%;
   scroll-behavior: smooth;
   // TEMPORARY TESTING
-  min-width: 950px;
+  // min-width: 950px;
   min-height: 100vh;
 }
 h1,
