--- a/src/styles/layout/_jobGuides.scss
+++ b/src/styles/layout/_jobGuides.scss
@@ -46,6 +46,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 50%;
   }
   .blogImage {
     position: relative;
