--- a/public/styles/App.css
+++ b/public/styles/App.css
@@ -252,7 +252,6 @@ template {
 html {
   font-size: 125%;
   scroll-behavior: smooth;
-  min-width: 950px;
   min-height: 100vh;
 }
 
@@ -286,13 +285,13 @@ img {
 }
 
 .wrapper {
-  max-width: 1400px;
-  width: 85%;
+  max-width: 1100px;
+  width: 80%;
   margin: 0 auto;
 }
 
 .navWrapper {
-  max-width: 1400px;
+  max-width: 1300px;
   width: 95%;
   margin: 0 auto;
 }
@@ -405,13 +404,22 @@ body * {
 
 h1 * {
   font-family: "Gordita Medium", serif;
+  font-size: 3.4rem;
+}
+
+.navMenu {
+  font-size: 1rem;
+}
+
+.showNavButton {
+  display: none;
 }
 
 .buttonRoundClear {
   background-color: transparent;
   border: 1px solid black;
   border-radius: 20px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -429,7 +437,7 @@ h1 * {
   background-color: transparent;
   border: 1px solid black;
   border-radius: 5px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -448,7 +456,7 @@ h1 * {
   border: 1px solid transparent;
   color: white;
   border-radius: 20px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -465,7 +473,7 @@ h1 * {
   border: 1px solid transparent;
   color: white;
   border-radius: 20px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -482,7 +490,7 @@ h1 * {
   border: 1px solid transparent;
   color: white;
   border-radius: 5px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -499,7 +507,7 @@ h1 * {
   border: 1px solid transparent;
   color: white;
   border-radius: 5px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -516,7 +524,7 @@ h1 * {
   border: 1px solid transparent;
   color: black;
   border-radius: 5px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -534,7 +542,7 @@ h1 * {
   border: 1px solid transparent;
   color: white;
   border-radius: 5px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -551,7 +559,7 @@ h1 * {
   border: 1px solid transparent;
   color: white;
   border-radius: 20px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 7px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -568,7 +576,7 @@ h1 * {
   border: 1px solid transparent;
   color: white;
   border-radius: 30px;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   padding: 20px 15px;
   cursor: pointer;
   transition: all 0.1s linear;
@@ -618,10 +626,6 @@ h1 * {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-image: url("../assets/header/background.png");
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
   min-height: 100vh;
   padding-bottom: 50px;
 }
@@ -681,7 +685,7 @@ h1 * {
 nav {
   width: 100%;
   padding: 50px 0;
-  background-color: rgba(255, 255, 255, 0.85);
+  background-color: rgba(255, 255, 255, 0.95);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -698,7 +702,6 @@ nav {
 .navMenu {
   min-width: 40%;
   text-transform: capitalize;
-  font-size: 0.8rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -710,7 +713,9 @@ nav {
 }
 .navMenu li:hover:not(.subMenuParent), .navMenu li:focus:not(.subMenuParent) {
   transform: scale(1.3);
-  border-bottom: 2px solid #00BF58;
+}
+.navMenu li:hover:not(.subMenuParent) a, .navMenu li:focus:not(.subMenuParent) a {
+  color: #00BF58;
 }
 .navMenu .subMenuParent {
   position: relative;
@@ -719,35 +724,50 @@ nav {
   padding: 5px 10px;
 }
 .navMenu .subMenuParent .subMenuTitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-left: 2px solid transparent;
   border-right: 2px solid transparent;
   transition: all 0.1s linear;
   padding: 0 2px;
+  position: relative;
+}
+.navMenu .subMenuParent .subMenuTitle svg {
+  font-size: 1rem;
+  position: relative;
+  top: 1px;
+  left: 2px;
+  transition: all 0.2s linear;
+}
+.navMenu .subMenuParent .subMenuTitle svg:hover {
+  color: #00BF58;
 }
 .navMenu .subMenuParent:hover .subMenuTitle {
-  border-left: 2px solid #00BF58;
-  border-right: 2px solid #00BF58;
   transform: scale(1.3);
+  color: #00BF58;
+}
+.navMenu .subMenuParent:hover svg {
+  transform: rotate3d(180, 1, 1, 180deg);
 }
 .navMenu .subMenu {
   visibility: hidden;
   opacity: 0;
-  padding: 15px 5px;
+  padding: 20px 5px;
   height: 0;
-  background-color: #EFF6F3;
+  background-color: rgba(255, 255, 255, 0.9);
   position: absolute;
   height: 0px;
-  top: 30px;
-  left: -65px;
+  top: 36px;
+  left: -100px;
   transition: all 0.1s linear;
   overflow: hidden;
-  border: 2px solid #244034;
-  border-radius: 5px;
+  border-bottom: 1px solid #244034;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  width: 210px;
+  width: 300px;
 }
 .navMenu .subMenu li {
   padding: 5px 0;
@@ -756,12 +776,14 @@ nav {
 }
 .navMenu .subMenu li:hover {
   transform: scale(1.05);
-  border-bottom: 2px solid #00BF58;
+}
+.navMenu .subMenu li:hover a {
+  color: #00BF58;
 }
 .navMenu .slideOut {
   visibility: visible;
   opacity: 1;
-  height: 190px;
+  height: 220px;
 }
 .navMenu .slideOut li {
   width: 90%;
@@ -784,15 +806,19 @@ nav {
 .headerCenter {
   min-height: 50vh;
   min-width: 60%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url("../assets/header/background.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 h1 {
   text-align: center;
-  font-size: 3.4rem;
 }
 h1 span {
   display: block;
@@ -830,7 +856,14 @@ h1 span {
   border-bottom: 2px solid transparent;
 }
 .headerSearchContainer select:hover {
-  border-bottom: 2px solid #00BF58;
+  color: #00BF58;
+}
+.headerSearchContainer select:active {
+  size: 10;
+}
+.headerSearchContainer select option {
+  font-size: 1rem;
+  color: black;
 }
 .headerSearchContainer input[type=text] {
   border: none;
@@ -1155,6 +1188,7 @@ h1 span {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 50%;
 }
 .jobGuidesBlogs .blogImage {
   position: relative;
@@ -1369,6 +1403,12 @@ h1 span {
   margin-top: 50px;
   border-top: 2px solid #EFF6F3;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footerTop .footerTopHalf {
+  width: 60%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -2113,7 +2153,7 @@ h1 {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 50px;
 }
 .contactTypes li {
@@ -2688,12 +2728,12 @@ h1 {
   font-weight: lighter;
 }
 .jobDetailsRight h5 {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   font-weight: lighter;
   color: rgb(170, 170, 170);
 }
 .jobDetailsRight p {
-  font-size: 0.6rem;
+  font-size: 0.7rem;
   text-transform: capitalize;
   margin-top: 5px;
 }
@@ -2950,7 +2990,6 @@ h1 {
 }
 .dashboardContainer .dashboardStats {
   width: 100%;
-  min-width: 900px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -3210,6 +3249,157 @@ h1 {
 .companyInfo .companyNumber label,
 .companyInfo .companyCategory label {
   margin: 10px 0;
+}
+
+@media screen and (max-width: 1100px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .showNavButton {
+    display: block;
+    position: fixed;
+    z-index: 1000;
+    right: 0;
+    top: 0;
+    padding: 0;
+    margin: 25px 50px;
+    background-color: #EFF6F3;
+    border-radius: 10px;
+    border: none;
+    color: #00BF58;
+  }
+  .showNavButton:active {
+    background-color: #755146;
+    color: white;
+  }
+  .showNavButton svg {
+    font-size: 3rem;
+  }
+  div.navWrapper {
+    position: relative;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) {
+    visibility: visible;
+    position: fixed;
+    z-index: 200;
+    width: 100%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    justify-content: flex-end;
+    transition: all 0.2s linear;
+    padding: 100px 0 50px 0;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .navMenu {
+    flex-direction: column;
+    align-items: flex-end;
+    margin: 50px 0;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .navMenu li {
+    margin: 20px 50px;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .navMenu .subMenu {
+    width: 0;
+    width: 300px;
+    height: 300px;
+    top: -150px;
+    left: 0;
+    transform: translate(-100%);
+    border: none;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .navMenu .subMenu li {
+    padding: 0;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .navMenu .slideOut {
+    width: 300px;
+    height: 300px;
+    background-color: transparent;
+    border: none;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .subMenuParent {
+    padding: 0;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .subMenuParent:hover svg {
+    transform: rotate(270deg);
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .subMenuTitle {
+    flex-direction: row-reverse;
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .subMenuTitle svg {
+    transform: rotate(90deg);
+  }
+  nav:not(nav.dashboardNav, nav.MuiPagination-root) .navButtons {
+    margin-right: 50px;
+  }
+  .navWrapper nav.hideNav {
+    right: -100%;
+    visibility: hidden;
+  }
+  .contactHeader,
+  .pricingHeader,
+  .jobsHeader,
+  .jobDetailsHeader {
+    padding-top: 50px;
+  }
+  .pricingPlan {
+    padding-bottom: 50px;
+  }
+  .pricingCards {
+    flex-direction: column;
+  }
+  .pricingCards li {
+    width: 80%;
+    margin: 20px 0;
+  }
+  .pricingCards .dollarSign {
+    left: 50px;
+  }
+  .pricingCards .cents {
+    right: 50px;
+  }
+  .jobDetails {
+    flex-direction: column-reverse;
+  }
+  .jobDetailsLeft {
+    width: 100%;
+  }
+  .jobDetailsRight {
+    width: 100%;
+    position: static;
+    margin-bottom: 50px;
+  }
+}
+@media screen and (max-width: 950px) {
+  .categories .categoriesCards li {
+    width: calc(50% - 20px);
+    height: 350px;
+    margin-bottom: 40px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .categories .categoriesCards li .finalCardIcons {
+    display: none;
+  }
+  .footerTop {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+  .footerTop .footerTopHalf {
+    width: 100%;
+    margin-top: 50px;
+  }
+  .footerTop .footerNewsletter {
+    width: 100%;
+    max-width: 500px;
+    text-align: center;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
