--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -17,6 +17,15 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  .footerTopHalf {
+    // padding: 50px 0;
+    // margin-top: 50px;
+    // border-top: 2px solid $greenBg;
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
   h4 {
     padding: 10px 0;
     margin-bottom: 20px;
