--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -5,12 +5,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background-image: url("../assets/header/background.png");
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
+  // background-image: url("../assets/header/background.png");
+  // background-position: center;
+  // background-size: contain;
+  // background-repeat: no-repeat;
   min-height: 100vh;
   padding-bottom: 50px;
+  // padding-top: 100px;
 }
 .contactHeader,
 .jobsHeader,
@@ -48,7 +49,7 @@
 nav {
   width: 100%;
   padding: 50px 0;
-  background-color: rgba(255, 255, 255, 0.85);
+  background-color: rgba(255, 255, 255, 0.95);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -65,7 +66,6 @@ nav {
 .navMenu {
   min-width: 40%;
   text-transform: capitalize;
-  font-size: 0.8rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,7 +76,9 @@ nav {
     &:hover:not(.subMenuParent),
     &:focus:not(.subMenuParent) {
       transform: scale(1.3);
-      border-bottom: 2px solid $lightGreen;
+      a {
+        color: $lightGreen;
+      }
     }
   }
   .subMenuParent {
@@ -85,39 +87,56 @@ nav {
     pointer-events: all;
     padding: 5px 10px;
     .subMenuTitle {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       border-left: 2px solid transparent;
       border-right: 2px solid transparent;
       transition: all 0.1s linear;
       padding: 0 2px;
+      position: relative;
+      svg {
+        font-size: 1rem;
+        position: relative;
+        top: 1px;
+        left: 2px;
+        transition: all 0.2s linear;
+        
+        &:hover {
+          color: $lightGreen;
+        }
+      }
     }
     &:hover {
       .subMenuTitle {
-        border-left: 2px solid $lightGreen;
-        border-right: 2px solid $lightGreen;
         transform: scale(1.3);
+        color: $lightGreen;
+      }
+      svg {
+        transform: rotate3d(180, 1, 1, 180deg)
       }
     }
   }
   .subMenu {
     visibility: hidden;
     opacity: 0;
-    padding: 15px 5px;
+    padding: 20px 5px;
     height: 0;
-    background-color: $greenBg;
+    background-color: rgba(255, 255, 255, 0.9);
     position: absolute;
     height: 0px;
-    top: 30px;
-    left: -65px;
+    top: 36px;
+    left: -100px;
     transition: all 0.1s linear;
     overflow: hidden;
-    border: 2px solid $darkGreen;
+    border-bottom: 1px solid $darkGreen;
     // border-top: none;
-    border-radius: 5px;
+    // border-radius: 5px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 210px;
+    width: 300px;
     // background: linear-gradient(0deg, $greenBg 70%, rgba(253, 187, 45, 0) 100%);
     li {
       padding: 5px 0;
@@ -125,14 +144,16 @@ nav {
       border-bottom: 2px solid transparent;
       &:hover {
         transform: scale(1.05);
-        border-bottom: 2px solid $lightGreen;
+        a {
+          color: $lightGreen;
+        }
       }
     }
   }
   .slideOut {
     visibility: visible;
     opacity: 1;
-    height: 190px;
+    height: 220px;
     li {
       width: 90%;
       text-align: center;
@@ -154,14 +175,18 @@ nav {
 .headerCenter {
   min-height: 50vh;
   min-width: 60%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url("../assets/header/background.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 h1 {
   text-align: center;
-  font-size: 3.4rem;
   span {
     display: block;
   }
@@ -195,7 +220,14 @@ h1 {
     border: none;
     border-bottom: 2px solid transparent;
     &:hover {
-      border-bottom: 2px solid $lightGreen;
+      color: $lightGreen;
+    }
+    &:active {
+      size: 10;
+    }
+    option {
+      font-size: 1rem;
+      color: black;
     }
   }
   input[type="text"] {
