--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -65,7 +65,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 50px;
   li {
     display: flex;
